--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,8 @@ header {
 }
 
 .services .head {
-    padding-left: 10vw;
-    max-width: 40vw;
+    padding-left: 200px;
+    max-width: 800px;
 }
 
 .services .head span {
@@ -119,8 +119,8 @@ header {
 }
 
 .services .subscraption {
-    padding-left: 10vw;
-    max-width: 30vw;
+    padding-left: 200px;
+    max-width: 600px;
 }
 
 .services .subscraption h2 {
@@ -159,7 +159,7 @@ header {
 
 .input-box .btn-default {
     position: absolute;
-    right: 2%;
+    right: 1%;
     top: 50%;
     transform: translateY(-50%);
     z-index: 100;
@@ -172,7 +172,7 @@ header {
 .our-works h2 {
     font-size: 36px;
     line-height: 54px;
-    max-width: 25vw;
+    max-width: 500px;
     padding-left: 100px;
     margin-bottom: 30px;
 }
