Readme file add

--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ header {
 
 .card-wrapper {
     display: flex;
-    width: 80vw;
+    width: 80%;
     margin: auto;
     justify-content: space-between;
 }
