--- a/css/style.css
+++ b/css/style.css
@@ -252,21 +252,25 @@ header {
 .boxes {
     display: flex;
     flex-wrap: wrap;
-    margin: auto;
     width: 60%;
+    margin: auto;
     justify-content: space-between;
 }
 
-.boxes .box:nth-child(2n + 1) {
-    margin-top: 120px;
-} 
+.boxes .box {
+    width: 48%;
+}
 
 .boxes .box .image {
-    width: 500px;
+    width: 100%;
     height: 500px;
     border-radius: 24px;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.boxes .box:nth-child(2n + 1) {
+    margin-top: 120px;
 }
 
 .boxes .box:nth-child(1) .image {
